mds: prevent filelock from being stuck at XSYN state

Lock:file_eval() does not properly handle the condition: filelock
is in XSYN state, both loner_cap and want_loner_cap are >= 0, and
loner_cap != want_loner_cap.

To set loner to the wanted one, mds need to revoke caps from the old
loner. Changing lock state to MIX can do the job.

Fixes: http://tracker.ceph.com/issues/22008
Signed-off-by: "Yan, Zheng" <zyan@redhat.com